--- a/2_Assessment.Rmd
+++ b/2_Assessment.Rmd
@@ -1,11 +1,56 @@
-<!-- ************ASSESSMENT SECTION**************************************** -->
-#Assessment
-
-##Data
+<!-- ************DATA SECTION**************************************** -->
+#Data
 Data used in the `r spp` assessment are summarized in Figure \ref{fig:data_plot}. A description of each data source is provided below.
 
+<!-- ********************************************************************** -->
+<!-- ************FISHERY-INDEPENDENT DATA********************************** -->
+<!-- ********************************************************************** -->
 
+##Fishery-Independent Data:
+
+###Northwest Fisheries Science Center (NWFSC) shelf-slope survey
+
+The NWFSC shelf-slope survey is based on a random-grid design; covering the coastal waters from a depth of 55 m to 1,280 m [@bradburn_2003_2011]. This design uses four chartered industry vessels in most years, assigned to a roughly equal number of randomly selected grid cells. The survey, which has been conducted from late-May to early-October each year, is divided into two 2-vessel passes of the coast, which are executed from north to south. This design therefore incorporates both vessel-to-vessel differences in catchability as well as variance associated with selecting a relatively small number (~700) of cells from a very large population of possible cells (greater than 11,000) distributed from the Mexican to the Canadian border. 
+
+The data from the NWFSC shelf-slope survey was analyzed using a spatial delta-generalized linear mixed model (delta-GLMM) [@thorson_comparing_2017]. Predicted fish biomass density is derived as the product of a "delta" portion for the probability of a non-zero catch and a second portion for the magnitude of the non-zero catches.  Further, the geostatistical GLMM framework can accommodate spatial autocorrelation.  Additional information about the approach and the software package it is implemented in are available from www.fishstats.org. \hl{describe VAST}
+
+The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
+
+###Northwest Fisheries Science Center (NWFSC) slope survey  
+
+The NWFSC slope survey covered waters throughout the summer from 183 m to 1280 m north of $34^\circ 30^\prime$ S, which is near Point Conception. The survey strata used to expand the biomass data for this assessment are shown in \hl{Table 5}. 
+
+The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
+
+
+###Alaska Fisheries Science Center (AFSC) slope survey 
+
+The AFSC slope survey operated during autumn (October-November) aboard the R/V Miller Freeman. Partial survey coverage of the U.S. west coast occurred during 1988-96 and complete coverage (north of $34^\circ 30^\prime$ S) during 1997, 1999, 2000, and 2001. Only the four years of consistent and complete surveys plus 1996, which surveyed north of $43^\circ$ N latitude to the U.S.-Canada border, were used in this assessment. The number of tows with length data ranged from 19 in 2000 to 48 in 1996 \ref{tab:AFSC_Lengths}.  Because a large number of positive tows occurred in 1996, it was decided to include that year, which surveyed from $43^\circ$ N latitude to the U.S.-Canada border. Therefore, only tows from $43^\circ$ N latitude to the U.S.-Canada border were used.
+
+The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
+
+###Triennial Bottom Trawl Survey
+
+The triennial survey was first conducted by the AFSC in 1977 and spanned the time-frame from 1977-2004. The survey's design and sampling methods are most recently described in [@weinberg_estimation_2002]. Its basic design was a series of equally-spaced transects from which searches for tows in a specific depth range were initiated \hl{(Figure 5)}. The survey design has changed slightly over the period of time \hl{(Table 4, Figure 3)}. In general, all of the surveys were conducted in the mid-summer through early fall: the 1977 survey was conducted from early July through late September; the surveys from 1980 through 1989 ran from mid-July to late September; the 1992 survey spanned from mid-July through early October; the 1995 survey was conducted from early June to late August; the 1998 survey ran from early June through early August; and the 2001 and 2004 surveys were conducted in May-July \hl{(Figure 4)}.
+
+Haul depths ranged from 91-457 m during the 1977 survey with no hauls shallower than 91 m. The surveys in 1980, 1983, and 1986 covered the West Coast south to $36.8^\circ$ N latitude and a depth range of 55-366 meters. The surveys in 1989 and 1992 covered the same depth range but extended the southern range to $34.5^\circ$ N (near Point Conception). From 1995 through 2004, the surveys covered the depth range 55-500 meters and surveyed south to $34.5^\circ$ N. In the final year of the triennial series (2004), the NWFSC's Fishery Resource and Monitoring division (FRAM) conducted the survey and followed very similar protocols as the AFSC.
+
+Given the different depths surveyed during 1977, the data from that year were not included in this assessment. Water hauls [@zimmermann_influence_2003] and tows located in Canadian waters were also excluded from the analysis of this survey. The survey was analyzed as an early series (1980-1992) and a late series (1995-2004), as has been done in other West Coast rockfish assessments.
+
+\hl{Describe whether the time-series was split or retained as one index}
+
+The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
+
+###Pacific ocean perch Survey
+
+A survey targeted designed to sample `r spp` was conducted in 1979 and again in 1985.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
+
+
+<!-- ********************************************************************** -->
 <!-- ************FISHERY-DEPENDENT DATA************************************ -->
+<!-- ********************************************************************** -->
+##Fishery-dependent data
+
 ###Commercial Fishery Landings
 
 **Washington**
@@ -28,131 +73,33 @@ Catches of `r spp` are monitored aboard the vessel by observers in the At-Sea ha
 
 From the 1960s through the early 1970s, foreign trawling enterprises harvested considerable amounts of rockfish off Washington and Oregon, and along with the domestic trawling fleet, landed large quantities of `r spp`. Foreign catches of individual species were estimated by @rogers_species_2003 and attributed to INPFC areas for the years of 1966-1976 for `r spp`. The foreign catches were combined across areas for a coastwide removal total.
 
-**Discards**
+###Discards
 
 Data on discards of `r spp` are available from two different data sources.  The earliest source is called the Pikitch data and comes from a study organized by Ellen Pikitch that collected trawl discards from 1985-1987 [@pikitch_evaluation_1988].  The northern and southern boundaries of the study were $48^\circ 42^\prime$ N latitude and $42^\circ 60^\prime$ N. latitude respectively, which is primarily within the Columbia INPFC area [@pikitch_evaluation_1988 ; @rogers_numerical_1992].  Participation in the study was voluntary and included vessels using bottom, midwater, and shrimp trawl gears.  Observers of normal fishing operations on commercial vessels collected the data, estimated the total weight of the catch by tow and recorded the weight of species retained and discarded in the sample.  Results of the Pikitch data were obtained from John Wallace (NWFSC, personal communication) in the form of ratios of discard weight to retained weight of `r spp` and sex-specific length frequencies.  Discard estimates are shown in Table \ref{tab:Discard}.   
 
 The second source is from the West Coast Groundfish Observer Program (WCGOP).  This program is part of the NWFSC and has been recording discard observations since 2003. Table \ref{tab:Discard} shows the discard ratios of `r spp` from the WCGOP.  Since 2011, when the trawl rationalization program was implemented, observer coverage rates increased to nearly 100% for all the limited entry trawl vessels in the program and discard rates declined compared to pre-2011 rates.  Discard rates were obtained for both the catch-share and the non-catch share sector for `r spp`.  A single discard rate was calculated by weighting discard rates based on the commercial landings by each sector.  Discard length composition for the trawl fleet varied by year, with larger fish being discarded prior to 2011 (Figure \ref{fig:WCGOP_discard}).
  
 
-
-###Abundance Indices
-
-###Fishery-Dependent Data:
-
-**Historical Commercial Catch-per-unit effort**
+###Historical Commercial Catch-per-unit effort
 
 Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery were combined for the INPFC Vancouver and Columbia areas (Table \ref{tab:CPUE_Summary} from Gunderson [-@gunderson_population_1977]).  Although these data reflect catch rates for the US fleet, the highest catch rates coincided with the beginning of removals by the foreign fleet.  This suggest that, barring unaccounted changes in fishing efficiency during this period, the level of abundance was high at that time.  A CV of 0.40 was used in this assessment to be consistent with the CV observed in the survey data.
 
-
-###Fishery-Independent Data:
-
-**Northwest Fisheries Science Center (NWFSC) shelf-slope survey**
-
-The NWFSC shelf-slope survey is based on a random-grid design; covering the coastal waters from a depth of 55 m to 1,280 m [@bradburn_2003_2011]. This design uses four chartered industry vessels in most years, assigned to a roughly equal number of randomly selected grid cells. The survey, which has been conducted from late-May to early-October each year, is divided into two 2-vessel passes of the coast, which are executed from north to south. This design therefore incorporates both vessel-to-vessel differences in catchability as well as variance associated with selecting a relatively small number (~700) of cells from a very large population of possible cells (greater than 11,000) distributed from the Mexican to the Canadian border. 
-
-The data from the NWFSC shelf-slope survey was analyzed using a spatial delta-generalized linear mixed model (delta-GLMM) [@thorson_comparing_2017]. Predicted fish biomass density is derived as the product of a "delta" portion for the probability of a non-zero catch and a second portion for the magnitude of the non-zero catches.  Further, the geostatistical GLMM framework can accommodate spatial autocorrelation.  Additional information about the approach and the software package it is implemented in are available from www.fishstats.org. \hl{describe VAST}
-
-The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
-
-**Northwest Fisheries Science Center (NWFSC) slope survey**   
-
-The NWFSC slope survey covered waters throughout the summer from 183 m to 1280 m north of $34^\circ 30^\prime$ S, which is near Point Conception. The survey strata used to expand the biomass data for this assessment are shown in \hl{Table 5}. 
-
-The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
+###Fishery Length And Age Data
 
 
-**Alaska Fisheries Science Center (AFSC) slope survey**   
-
-The AFSC slope survey operated during autumn (October-November) aboard the R/V Miller Freeman. Partial survey coverage of the U.S. west coast occurred during 1988-96 and complete coverage (north of $34^\circ 30^\prime$ S) during 1997, 1999, 2000, and 2001. Only the four years of consistent and complete surveys plus 1996, which surveyed north of $43^\circ$ N latitude to the U.S.-Canada border, were used in this assessment. The number of tows with length data ranged from 19 in 2000 to 48 in 1996 \ref{tab:AFSC_Lengths}.  Because a large number of positive tows occurred in 1996, it was decided to include that year, which surveyed from $43^\circ$ N latitude to the U.S.-Canada border. Therefore, only tows from $43^\circ$ N latitude to the U.S.-Canada border were used.
-
-The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
-
-**Triennial Bottom Trawl Survey**
-
-The triennial survey was first conducted by the AFSC in 1977 and spanned the time-frame from 1977-2004. The survey's design and sampling methods are most recently described in [@weinberg_estimation_2002]. Its basic design was a series of equally-spaced transects from which searches for tows in a specific depth range were initiated \hl{(Figure 5)}. The survey design has changed slightly over the period of time \hl{(Table 4, Figure 3)}. In general, all of the surveys were conducted in the mid-summer through early fall: the 1977 survey was conducted from early July through late September; the surveys from 1980 through 1989 ran from mid-July to late September; the 1992 survey spanned from mid-July through early October; the 1995 survey was conducted from early June to late August; the 1998 survey ran from early June through early August; and the 2001 and 2004 surveys were conducted in May-July \hl{(Figure 4)}.
-
-Haul depths ranged from 91-457 m during the 1977 survey with no hauls shallower than 91 m. The surveys in 1980, 1983, and 1986 covered the West Coast south to $36.8^\circ$ N latitude and a depth range of 55-366 meters. The surveys in 1989 and 1992 covered the same depth range but extended the southern range to $34.5^\circ$ N (near Point Conception). From 1995 through 2004, the surveys covered the depth range 55-500 meters and surveyed south to $34.5^\circ$ N. In the final year of the triennial series (2004), the NWFSC's Fishery Resource and Monitoring division (FRAM) conducted the survey and followed very similar protocols as the AFSC.
-
-Given the different depths surveyed during 1977, the data from that year were not included in this assessment. Water hauls [@zimmermann_influence_2003] and tows located in Canadian waters were also excluded from the analysis of this survey. The survey was analyzed as an early series (1980-1992) and a late series (1995-2004), as has been done in other West Coast rockfish assessments.
-
-\hl{Describe whether the time-series was split or retained as one index}
-
-The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
-
-**Pacific ocean perch Survey**
-
-A survey targeted designed to sample `r spp` was conducted in 1979 and again in 1985.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
 
 
 <!--************BIOLOGICAL DATA*********************************************-->
-###Biological Parameters and Data
+##Biological Data
 
-**Length And Age Compositions**
-
-Include: Sample size information for length and age composition data by area, 
-year, gear, market category, etc., including both the number of trips and 
-fish sampled.
-
-Length compositions were provided from the following sources, by region, with 
-brief descriptions below:    
-
-\begin{itemize}[noitemsep,nolistsep,topsep=0pt]
-  \item Commercial fishery - landed: 1966-2016
-  \item Commercial fishery - discard: 2004-2015
-  \item At-sea hake fishery: 2003-2016
-  \item `r spp` Survey: 1979 and 1985
-  \item Triennial Survey: 1980, 1983, 1986, 1989, 1992, 1995, 1998, 2001, 2004
-  \item AFSC Slope Survey: 1996-2001
-  \item NWFS Slope Survey: 2001-2002
-  \item NWFSC Shelf-Slope Survey: 2003-2016
-\end{itemize}
-
-
-*Commercial: PacFIN*
-
-
-*Research: NWFSC shelf-slope survey*
-
-*Research: NWFSC slope survey*
-
-
-
-
-\vspace{.5cm}
-**Age Structures**
-
-Age structure data were available from the following sources:
-
-_Model Region 1_ 
-\begin{itemize}[noitemsep,nolistsep,topsep=0pt]
-  \item Source No. 1 (\emph{ex. research, commercial dead fish, live fish, etc},\\ 
-        date range (ex. 2010-2011)
-  \item Source No. 2 (\emph{ex. research, commercial dead fish, live fish, etc},\\
-        date range (ex. 2010-2011) 
-  \item etc...      
-  \item Begin sublist if desired 
-    \begin{itemize}[noitemsep,nolistsep]
-      \item Sublist source No. 1     
-      \item Sublist source No. 2        
-      \item etc...     
-    \end{itemize}
-  \item Back to main list, next Source     
-  \item Last Source     
-\end{itemize}
-
-
-
-\vspace{.5cm}
-
-**Natural mortality**
+###Natural mortality
 
 Historic `r spp` ages determined using scales and surface reading methods of otoliths, resulted in estimates of natural mortality of between 0.10 and 0.20yr^-1^ with a longevity
 less than 30 years[@gunderson_population_1977].  Based on break-and-burn method of age determination using otoliths, the maximum age of `r spp` was revised to be 90 years [@chilton_age_1982]. The updated understanding concerning `r spp` longevity reduced the estimate of natural mortality based on Hoenig's [-@hoenig_empirical_1983] relationship to 0.059yr^-1^. The previous assessment applied a prior distribution on natural mortality based upon multiple life history correlates (including Hoenig's method, Gunderson gonadosomatic index [-@gunderson_trade-off_1997], and McCoy and Gillooly's [-@mccoy_predicting_2008] theoretical relationship) developed separately for female and male `r spp`.  This assessment also applied a prior on natural mortality.  However, the prior and standard deviation were generated as a non-linear function of maximum age as developed by Then et al. [-@then_evaluating_2015] and modified by  Owen Hamel which greatly improved the fit to the underlying age data to create the 'Hamel-Then' prior.  A maximum age of 100 was used in the development of the prior where female natural memorability was set equal to `r mod1$MGparmAdj$NatM_p_1_Fem_GP_1[1]` and male natural mortality estimated as an offset from females at `r round(mod1$MGparmAdj$NatM_p_1_Fem_GP_1[1] * exp(mod1$MGparmAdj$NatM_p_1_Mal_GP_1[1]),3)`. 
 
 \vspace{.5cm}
 
-**Sex ratio, maturation, and fecundity**
+###Sex ratio, maturation, and fecundity
 
 Examining all biological data sources, the sex ratio of young fish are within 5% of 1:1 by either length or age (Figure \ref{fig:sexratio} and \ref{fig:sexratio_Age}), and hence this assessment the sex ratio at birth was assumed to be 1:1.  This assessment assumed a logistic maturity-at-length curve based on analysis of 537 fish maturity samples collected from the NWFSC shelf-slope survey.  This is revised from the previous assessment which assumed maturity-at-age based on the work of Hannah and Parker [@hannah_age-modulated_2007].  Additionally, the new maturity-at-length curve is based on the estimate of functional maturity an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the
 measured frequency of atretic cells (M. Head, personal communication).  The 50% size-at-maturity was estimated at 32.1 cm with maturity asymptoting to one for larger fish.
@@ -161,14 +108,14 @@ The fecundity-at-age has also been updated from the previous assessment based on
 
 \vspace{.5cm}
 
-**Length-weight relationship**
+###Length-weight relationship
 
 The length-weight relationship for `r spp` was estimated outside the model using all biological data available from fishery and fishery-independent data sources where the female weight-at-length in grams was estimated at `r mod1$MGparmAdj$Wtlen_1_Fem[1]`$L$^`r round(mod1$MGparmAdj$Wtlen_2_Fem[1],2)`^ and males at `r mod1$MGparmAdj$Wtlen_1_Mal[1]`$L$^`r round(mod1$MGparmAdj$Wtlen_2_Mal[1], 2)`^ where $L$ is length in cm.
 
 
 \vspace{.5cm}
 
-**Growth (length-at-age)**
+###Growth (length-at-age)
 
 \hl{Write if estimated or fixed in the final model}
 
@@ -188,11 +135,9 @@ increase in growth, $t_0$ is the intercept, and $L_{\infty}$ is the asymptotic l
 ###Environmental Or Ecosystem Data Included In The Assessment
 
 
-
-
-
-
+<!-- ********************************************************************** -->
 <!-- ***********HISTORY AND CURRENT ASSESSMENT***************************** -->
+<!-- ********************************************************************** -->
 ##History Of Modeling Approaches Used For This Stock
 
 ###Previous Assessments
@@ -220,10 +165,12 @@ assessment.
 
 
 
+<!-- *************************************************************************** -->
+<!-- ************************ASSESSMENT DESCRIPTION***************************** -->
+<!-- *************************************************************************** -->
+#Assessment
 
-<!-- ************************MODEL DESCRIPTION***************************** -->
 ##Model Description
-
 
 ###Transition To The Current Stock Assessment
 Include: Complete description of any new modeling approaches
@@ -340,28 +287,28 @@ for each pre-STAR base model....
 
 \end{description}
 
-<!-- *********************MODEL 1 RESULTS********************************** -->
-##Model 1 
-###Model 1 Base Case Results
+<!-- ************************************************************************* -->
+<!-- *********************BASE MODEL RESULTS********************************** -->
+<!-- ************************************************************************* -->
+##Base Model Results
 
 Table \ref{tab:Model1_params}   
 
 
 
-### Model 1 Uncertainty and Sensitivity Analyses
+###Uncertainty and Sensitivity Analyses
 Table \ref{tab:Sensitivity_model1}
 
 
 
-### Model 1 Retrospective Analysis
+###Retrospective Analysis
  
 
-### Model 1 Likelihood Profiles
+###Likelihood Profiles
 
 
-###Model 1 Harvest Control Rules (CPS only)
 
-###Model 1 Reference Points (groundfish only)
+###Reference Points
 Intro sentence or two....(Table \ref{tab:Timeseries_mod1}). 
 
 Equilibrium yield at the proxy $F_{MSY}$ harvest rate corresponding to 
