--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -878,13 +878,126 @@ is broken into three seperate areas that are individually assessed. The
 status of the stock within each area are above Canadian management
 targets.
 
-\section{Assessment}\label{assessment}
-
-\subsection{Data}\label{data}
+\section{Data}\label{data}
 
 Data used in the Pacific ocean perch assessment are summarized in Figure
 \ref{fig:data_plot}. A description of each data source is provided
 below.
+
+\subsection{Fishery-independent data}\label{fishery-independent-data}
+
+\subsection{Fishery-Independent Data:}\label{fishery-independent-data-1}
+
+\subsubsection{Northwest Fisheries Science Center (NWFSC) shelf-slope
+survey}\label{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}
+
+The NWFSC shelf-slope survey is based on a random-grid design; covering
+the coastal waters from a depth of 55 m to 1,280 m (Bradburn et al.
+\protect\hyperlink{ref-bradburn_2003_2011}{2011}). This design uses four
+chartered industry vessels in most years, assigned to a roughly equal
+number of randomly selected grid cells. The survey, which has been
+conducted from late-May to early-October each year, is divided into two
+2-vessel passes of the coast, which are executed from north to south.
+This design therefore incorporates both vessel-to-vessel differences in
+catchability as well as variance associated with selecting a relatively
+small number (\textasciitilde{}700) of cells from a very large
+population of possible cells (greater than 11,000) distributed from the
+Mexican to the Canadian border.
+
+The data from the NWFSC shelf-slope survey was analyzed using a spatial
+delta-generalized linear mixed model (delta-GLMM) (Thorson and Barnett
+\protect\hyperlink{ref-thorson_comparing_2017}{2017}). Predicted fish
+biomass density is derived as the product of a ``delta'' portion for the
+probability of a non-zero catch and a second portion for the magnitude
+of the non-zero catches. Further, the geostatistical GLMM framework can
+accommodate spatial autocorrelation. Additional information about the
+approach and the software package it is implemented in are available
+from www.fishstats.org. \hl{describe VAST}
+
+The estimated index of abundance is shown in Table
+\ref{tab:Index_Summary}.
+
+\subsubsection{Northwest Fisheries Science Center (NWFSC) slope
+survey}\label{northwest-fisheries-science-center-nwfsc-slope-survey}
+
+The NWFSC slope survey covered waters throughout the summer from 183 m
+to 1280 m north of \(34^\circ 30^\prime\) S, which is near Point
+Conception. The survey strata used to expand the biomass data for this
+assessment are shown in \hl{Table 5}.
+
+The estimated index of abundance is shown in Table
+\ref{tab:Index_Summary}.
+
+\subsubsection{Alaska Fisheries Science Center (AFSC) slope
+survey}\label{alaska-fisheries-science-center-afsc-slope-survey}
+
+The AFSC slope survey operated during autumn (October-November) aboard
+the R/V Miller Freeman. Partial survey coverage of the U.S. west coast
+occurred during 1988-96 and complete coverage (north of
+\(34^\circ 30^\prime\) S) during 1997, 1999, 2000, and 2001. Only the
+four years of consistent and complete surveys plus 1996, which surveyed
+north of \(43^\circ\) N latitude to the U.S.-Canada border, were used in
+this assessment. The number of tows with length data ranged from 19 in
+2000 to 48 in 1996 \ref{tab:AFSC_Lengths}. Because a large number of
+positive tows occurred in 1996, it was decided to include that year,
+which surveyed from \(43^\circ\) N latitude to the U.S.-Canada border.
+Therefore, only tows from \(43^\circ\) N latitude to the U.S.-Canada
+border were used.
+
+The estimated index of abundance is shown in Table
+\ref{tab:Index_Summary}.
+
+\subsubsection{Triennial Bottom Trawl
+Survey}\label{triennial-bottom-trawl-survey}
+
+The triennial survey was first conducted by the AFSC in 1977 and spanned
+the time-frame from 1977-2004. The survey's design and sampling methods
+are most recently described in (Weinberg et al.
+\protect\hyperlink{ref-weinberg_estimation_2002}{2002}). Its basic
+design was a series of equally-spaced transects from which searches for
+tows in a specific depth range were initiated \hl{(Figure 5)}. The
+survey design has changed slightly over the period of time
+\hl{(Table 4, Figure 3)}. In general, all of the surveys were conducted
+in the mid-summer through early fall: the 1977 survey was conducted from
+early July through late September; the surveys from 1980 through 1989
+ran from mid-July to late September; the 1992 survey spanned from
+mid-July through early October; the 1995 survey was conducted from early
+June to late August; the 1998 survey ran from early June through early
+August; and the 2001 and 2004 surveys were conducted in May-July
+\hl{(Figure 4)}.
+
+Haul depths ranged from 91-457 m during the 1977 survey with no hauls
+shallower than 91 m. The surveys in 1980, 1983, and 1986 covered the
+West Coast south to \(36.8^\circ\) N latitude and a depth range of
+55-366 meters. The surveys in 1989 and 1992 covered the same depth range
+but extended the southern range to \(34.5^\circ\) N (near Point
+Conception). From 1995 through 2004, the surveys covered the depth range
+55-500 meters and surveyed south to \(34.5^\circ\) N. In the final year
+of the triennial series (2004), the NWFSC's Fishery Resource and
+Monitoring division (FRAM) conducted the survey and followed very
+similar protocols as the AFSC.
+
+Given the different depths surveyed during 1977, the data from that year
+were not included in this assessment. Water hauls (Zimmermann et al.
+\protect\hyperlink{ref-zimmermann_influence_2003}{2003}) and tows
+located in Canadian waters were also excluded from the analysis of this
+survey. The survey was analyzed as an early series (1980-1992) and a
+late series (1995-2004), as has been done in other West Coast rockfish
+assessments.
+
+\hl{Describe whether the time-series was split or retained as one index}
+
+The estimated index of abundance is shown in Table
+\ref{tab:Index_Summary}.
+
+\subsubsection{Pacific ocean perch
+Survey}\label{pacific-ocean-perch-survey}
+
+A survey targeted designed to sample Pacific ocean perch was conducted
+in 1979 and again in 1985. The estimated index of abundance is shown in
+Table \ref{tab:Index_Summary}.
+
+\subsection{Fishery-dependent data}\label{fishery-dependent-data}
 
 \subsubsection{Commercial Fishery
 Landings}\label{commercial-fishery-landings}
@@ -956,7 +1069,7 @@ and attributed to INPFC areas for the years of 1966-1976 for Pacific
 ocean perch. The foreign catches were combined across areas for a
 coastwide removal total.
 
-\textbf{Discards}
+\subsubsection{Discards}\label{discards}
 
 Data on discards of Pacific ocean perch are available from two different
 data sources. The earliest source is called the Pikitch data and comes
@@ -992,11 +1105,8 @@ by each sector. Discard length composition for the trawl fleet varied by
 year, with larger fish being discarded prior to 2011 (Figure
 \ref{fig:WCGOP_discard}).
 
-\subsubsection{Abundance Indices}\label{abundance-indices}
-
-\subsubsection{Fishery-Dependent Data:}\label{fishery-dependent-data}
-
-\textbf{Historical Commercial Catch-per-unit effort}
+\subsubsection{Historical Commercial Catch-per-unit
+effort}\label{historical-commercial-catch-per-unit-effort}
 
 Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery
 were combined for the INPFC Vancouver and Columbia areas (Table
@@ -1009,167 +1119,12 @@ this period, the level of abundance was high at that time. A CV of 0.40
 was used in this assessment to be consistent with the CV observed in the
 survey data.
 
-\subsubsection{Fishery-Independent
-Data:}\label{fishery-independent-data}
+\subsubsection{Fishery Length And Age
+Data}\label{fishery-length-and-age-data}
 
-\textbf{Northwest Fisheries Science Center (NWFSC) shelf-slope survey}
+\subsection{Biological Data}\label{biological-data}
 
-The NWFSC shelf-slope survey is based on a random-grid design; covering
-the coastal waters from a depth of 55 m to 1,280 m (Bradburn et al.
-\protect\hyperlink{ref-bradburn_2003_2011}{2011}). This design uses four
-chartered industry vessels in most years, assigned to a roughly equal
-number of randomly selected grid cells. The survey, which has been
-conducted from late-May to early-October each year, is divided into two
-2-vessel passes of the coast, which are executed from north to south.
-This design therefore incorporates both vessel-to-vessel differences in
-catchability as well as variance associated with selecting a relatively
-small number (\textasciitilde{}700) of cells from a very large
-population of possible cells (greater than 11,000) distributed from the
-Mexican to the Canadian border.
-
-The data from the NWFSC shelf-slope survey was analyzed using a spatial
-delta-generalized linear mixed model (delta-GLMM) (Thorson and Barnett
-\protect\hyperlink{ref-thorson_comparing_2017}{2017}). Predicted fish
-biomass density is derived as the product of a ``delta'' portion for the
-probability of a non-zero catch and a second portion for the magnitude
-of the non-zero catches. Further, the geostatistical GLMM framework can
-accommodate spatial autocorrelation. Additional information about the
-approach and the software package it is implemented in are available
-from www.fishstats.org. \hl{describe VAST}
-
-The estimated index of abundance is shown in Table
-\ref{tab:Index_Summary}.
-
-\textbf{Northwest Fisheries Science Center (NWFSC) slope survey}
-
-The NWFSC slope survey covered waters throughout the summer from 183 m
-to 1280 m north of \(34^\circ 30^\prime\) S, which is near Point
-Conception. The survey strata used to expand the biomass data for this
-assessment are shown in \hl{Table 5}.
-
-The estimated index of abundance is shown in Table
-\ref{tab:Index_Summary}.
-
-\textbf{Alaska Fisheries Science Center (AFSC) slope survey}
-
-The AFSC slope survey operated during autumn (October-November) aboard
-the R/V Miller Freeman. Partial survey coverage of the U.S. west coast
-occurred during 1988-96 and complete coverage (north of
-\(34^\circ 30^\prime\) S) during 1997, 1999, 2000, and 2001. Only the
-four years of consistent and complete surveys plus 1996, which surveyed
-north of \(43^\circ\) N latitude to the U.S.-Canada border, were used in
-this assessment. The number of tows with length data ranged from 19 in
-2000 to 48 in 1996 \ref{tab:AFSC_Lengths}. Because a large number of
-positive tows occurred in 1996, it was decided to include that year,
-which surveyed from \(43^\circ\) N latitude to the U.S.-Canada border.
-Therefore, only tows from \(43^\circ\) N latitude to the U.S.-Canada
-border were used.
-
-The estimated index of abundance is shown in Table
-\ref{tab:Index_Summary}.
-
-\textbf{Triennial Bottom Trawl Survey}
-
-The triennial survey was first conducted by the AFSC in 1977 and spanned
-the time-frame from 1977-2004. The survey's design and sampling methods
-are most recently described in (Weinberg et al.
-\protect\hyperlink{ref-weinberg_estimation_2002}{2002}). Its basic
-design was a series of equally-spaced transects from which searches for
-tows in a specific depth range were initiated \hl{(Figure 5)}. The
-survey design has changed slightly over the period of time
-\hl{(Table 4, Figure 3)}. In general, all of the surveys were conducted
-in the mid-summer through early fall: the 1977 survey was conducted from
-early July through late September; the surveys from 1980 through 1989
-ran from mid-July to late September; the 1992 survey spanned from
-mid-July through early October; the 1995 survey was conducted from early
-June to late August; the 1998 survey ran from early June through early
-August; and the 2001 and 2004 surveys were conducted in May-July
-\hl{(Figure 4)}.
-
-Haul depths ranged from 91-457 m during the 1977 survey with no hauls
-shallower than 91 m. The surveys in 1980, 1983, and 1986 covered the
-West Coast south to \(36.8^\circ\) N latitude and a depth range of
-55-366 meters. The surveys in 1989 and 1992 covered the same depth range
-but extended the southern range to \(34.5^\circ\) N (near Point
-Conception). From 1995 through 2004, the surveys covered the depth range
-55-500 meters and surveyed south to \(34.5^\circ\) N. In the final year
-of the triennial series (2004), the NWFSC's Fishery Resource and
-Monitoring division (FRAM) conducted the survey and followed very
-similar protocols as the AFSC.
-
-Given the different depths surveyed during 1977, the data from that year
-were not included in this assessment. Water hauls (Zimmermann et al.
-\protect\hyperlink{ref-zimmermann_influence_2003}{2003}) and tows
-located in Canadian waters were also excluded from the analysis of this
-survey. The survey was analyzed as an early series (1980-1992) and a
-late series (1995-2004), as has been done in other West Coast rockfish
-assessments.
-
-\hl{Describe whether the time-series was split or retained as one index}
-
-The estimated index of abundance is shown in Table
-\ref{tab:Index_Summary}.
-
-\textbf{Pacific ocean perch Survey}
-
-A survey targeted designed to sample Pacific ocean perch was conducted
-in 1979 and again in 1985. The estimated index of abundance is shown in
-Table \ref{tab:Index_Summary}.
-
-\subsubsection{Biological Parameters and
-Data}\label{biological-parameters-and-data}
-
-\textbf{Length And Age Compositions}
-
-Include: Sample size information for length and age composition data by
-area, year, gear, market category, etc., including both the number of
-trips and fish sampled.
-
-Length compositions were provided from the following sources, by region,
-with brief descriptions below:
-
-\begin{itemize}[noitemsep,nolistsep,topsep=0pt]
-  \item Commercial fishery - landed: 1966-2016
-  \item Commercial fishery - discard: 2004-2015
-  \item At-sea hake fishery: 2003-2016
-  \item Pacific ocean perch Survey: 1979 and 1985
-  \item Triennial Survey: 1980, 1983, 1986, 1989, 1992, 1995, 1998, 2001, 2004
-  \item AFSC Slope Survey: 1996-2001
-  \item NWFS Slope Survey: 2001-2002
-  \item NWFSC Shelf-Slope Survey: 2003-2016
-\end{itemize}
-
-\emph{Commercial: PacFIN}
-
-\emph{Research: NWFSC shelf-slope survey}
-
-\emph{Research: NWFSC slope survey}
-
-\vspace{.5cm} \textbf{Age Structures}
-
-Age structure data were available from the following sources:
-
-\emph{Model Region 1}
-
-\begin{itemize}[noitemsep,nolistsep,topsep=0pt]
-  \item Source No. 1 (\emph{ex. research, commercial dead fish, live fish, etc},\\ 
-        date range (ex. 2010-2011)
-  \item Source No. 2 (\emph{ex. research, commercial dead fish, live fish, etc},\\
-        date range (ex. 2010-2011) 
-  \item etc...      
-  \item Begin sublist if desired 
-    \begin{itemize}[noitemsep,nolistsep]
-      \item Sublist source No. 1     
-      \item Sublist source No. 2        
-      \item etc...     
-    \end{itemize}
-  \item Back to main list, next Source     
-  \item Last Source     
-\end{itemize}
-
-\vspace{.5cm}
-
-\textbf{Natural mortality}
+\subsubsection{Natural mortality}\label{natural-mortality}
 
 Historic Pacific ocean perch ages determined using scales and surface
 reading methods of otoliths, resulted in estimates of natural mortality
@@ -1200,7 +1155,8 @@ at 0.053.
 
 \vspace{.5cm}
 
-\textbf{Sex ratio, maturation, and fecundity}
+\subsubsection{Sex ratio, maturation, and
+fecundity}\label{sex-ratio-maturation-and-fecundity}
 
 Examining all biological data sources, the sex ratio of young fish are
 within 5\% of 1:1 by either length or age (Figure \ref{fig:sexratio} and
@@ -1228,7 +1184,8 @@ in millions of eggs. Spawning output at length is shown in Figure
 
 \vspace{.5cm}
 
-\textbf{Length-weight relationship}
+\subsubsection{Length-weight
+relationship}\label{length-weight-relationship}
 
 The length-weight relationship for Pacific ocean perch was estimated
 outside the model using all biological data available from fishery and
@@ -1238,7 +1195,7 @@ grams was estimated at 0.0000098\(L\)\textsuperscript{3.11} and males at
 
 \vspace{.5cm}
 
-\textbf{Growth (length-at-age)}
+\subsubsection{Growth (length-at-age)}\label{growth-length-at-age}
 
 \hl{Write if estimated or fixed in the final model}
 
@@ -1274,6 +1231,8 @@ previous assessment.
 
 
 \end{description}
+
+\section{Assessment}\label{assessment}
 
 \subsection{Model Description}\label{model-description}
 
@@ -1415,29 +1374,20 @@ Requests}\label{response-to-the-current-star-panel-requests}
 
 \end{description}
 
-\subsection{Model 1}\label{model-1}
-
-\subsubsection{Model 1 Base Case
-Results}\label{model-1-base-case-results}
+\subsection{Base Model Results}\label{base-model-results}
 
 Table \ref{tab:Model1_params}
 
-\subsubsection{Model 1 Uncertainty and Sensitivity
-Analyses}\label{model-1-uncertainty-and-sensitivity-analyses}
+\subsubsection{Uncertainty and Sensitivity
+Analyses}\label{uncertainty-and-sensitivity-analyses}
 
 Table \ref{tab:Sensitivity_model1}
 
-\subsubsection{Model 1 Retrospective
-Analysis}\label{model-1-retrospective-analysis}
+\subsubsection{Retrospective Analysis}\label{retrospective-analysis}
 
-\subsubsection{Model 1 Likelihood
-Profiles}\label{model-1-likelihood-profiles}
+\subsubsection{Likelihood Profiles}\label{likelihood-profiles}
 
-\subsubsection{Model 1 Harvest Control Rules (CPS
-only)}\label{model-1-harvest-control-rules-cps-only}
-
-\subsubsection{Model 1 Reference Points (groundfish
-only)}\label{model-1-reference-points-groundfish-only}
+\subsubsection{Reference Points}\label{reference-points-1}
 
 Intro sentence or two\ldots{}.(Table \ref{tab:Timeseries_mod1}).
 
@@ -2335,7 +2285,7 @@ Starting year & 1918 \\
   Minimun age for growth calculations & 3 \\ 
   Maximum age for growth calculations & 20 \\ 
   First mature age & 0 \\ 
-  Starting year of estimated recruitment &  \\ 
+  Starting year of estimated recruitment & 1940 \\ 
    &  \\ 
   \underline{Fishery characteristics} &  \\ 
   Fishery timing & mid-year \\ 
